tests/ui/type-alias-impl-trait/generic_duplicate_param_use6.stderr
error[E0277]: `(T, T)` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use6.rs:11:5
   |
LL |     (t, t)
   |     ^^^^^^ `(T, T)` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `(T, T)`, which is required by `(T, T): Debug`
   = note: required for `(T, T)` to implement `Debug`
help: consider extending the `where` clause, but there might be an alternative better way to express this requirement
   |
LL | type Two<T, U> = impl Debug (T, T): Debug;
   |                             +++++++++++++

error[E0277]: `(U, T)` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use6.rs:16:5
   |
LL |     (u, t)
   |     ^^^^^^ `(U, T)` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `(U, T)`, which is required by `(U, T): Debug`
   = note: required for `(U, T)` to implement `Debug`
help: consider extending the `where` clause, but there might be an alternative better way to express this requirement
   |
LL | type Two<T, U> = impl Debug (U, T): Debug;
   |                             +++++++++++++

error[E0277]: `(U, T)` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use6.rs:16:5
   |
LL |     (u, t)
   |     ^^^^^^ `(U, T)` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `(U, T)`, which is required by `(U, T): Debug`
   = note: required for `(U, T)` to implement `Debug`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider extending the `where` clause, but there might be an alternative better way to express this requirement
   |
LL | type Two<T, U> = impl Debug (U, T): Debug;
   |                             +++++++++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
